--- a/ESolutions.Customers.Web/appsettings.json
+++ b/ESolutions.Customers.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Server": "smtp.gmail.com",
+    "Port":  587 
+  }
 }
