--- a/ESolutions.Customers.Web/appsettings.json
+++ b/ESolutions.Customers.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+     "DefaultConnection": "Data Source=database.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +11,7 @@
   "AllowedHosts": "*",
   "MailSettings": {
     "Server": "smtp.gmail.com",
-    "Port":  587 
+    "Port":587
   }
 }
+ 
